--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "connected-react-router": "^6.3.2",
     "history": "^4.9.0",
     "react": "^16.8.6",
+    "react-calendar": "^2.18.1",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
