--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "connected-react-router": "^6.3.2",
     "history": "^4.9.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-calendar": "^2.18.1",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.1",
+    "react-moment": "^0.9.2",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
